--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,6 +12,7 @@ dependencies:
   cupertino_icons: 1.0.2
   flutter:
     sdk: flutter
+  fluttertoast: 8.2.4
   intl: 0.19.0
   path: 1.8.3
   sqflite: 2.3.1
