--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,8 +10,11 @@ environment:
 
 dependencies:
   cupertino_icons: 1.0.2
+  either_dart: 1.0.0
+  equatable: 2.0.5
   flutter:
     sdk: flutter
+  flutter_bloc: 8.1.3
   fluttertoast: 8.2.4
   intl: 0.19.0
   path: 1.8.3
